--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -3,7 +3,7 @@
   background-color: cadetblue;
   padding: 20px;
   border: 4px double white;
-  background: cadetblue; 
+  background: #4CAF50; 
   padding: 10px; 
 }
 
