--- a/src/components/StartPage/StartPage.module.css
+++ b/src/components/StartPage/StartPage.module.css
@@ -2,7 +2,7 @@
 .text {
   font-weight: normal;
   font-size: 30px;
-  color: cadetblue;;
+  color: #4CAF50;;
   text-align: center; 
   padding-top: 20px;
 }
