--- a/src/SortableTable.module.css
+++ b/src/SortableTable.module.css
@@ -30,3 +30,25 @@
   width: 10px;
   margin-left: 5px;
 }
+
+.button {
+  padding: 7px 14px;
+  font-size: 14;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: #fff;
+  background-color: #4CAF50;
+  border: none;
+  border-radius: 7px;
+  box-shadow: 0 5px #999;
+  margin: 10px;
+}
+
+.button:hover {background-color: #3e8e41}
+
+.button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
